eks/config/bookings-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookings-microservice
  namespace: microservices
  labels:
    app: bookings-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookings-microservice
  template:
    metadata:
      labels:
        app: bookings-microservice
    spec:
      containers:
      - name: bookings-microservice
        image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$PROJECT_ID-bookings-microservice:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: bookings-microservice
  namespace: microservices
  labels:
    app: bookings-microservice
spec:
  selector:
    app: bookings-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
