eks/config/flights-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-microservice
  namespace: microservices
  labels:
    app: flights-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flights-microservice
  template:
    metadata:
      labels:
        app: flights-microservice
    spec:
      containers:
      - name: flights-microservice
        image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$PROJECT_ID-flights-microservice:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: flights-microservice
  namespace: microservices
  labels:
    app: flights-microservice
spec:
  selector:
    app: flights-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
